# 591-notify

./: .gitignore  README.md  pyproject.toml  renovate.json  ruff.toml  run.bat  run.py
src/: __init__.py  database.py  schema.py  scraper.py  utils.py
