[project]
dependencies = [
  "fake-useragent>=1.5.1",
  "loguru>=0.7.2",
  "playwright>=1.47.0",
  "pydantic>=2.9.2",
  "requests>=2.32.3",
]
description = "Add your description here"
name = "591-notify"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.pyright]
typeCheckingMode = "standard"
